# ring_supplementary_material

./: .gitignore  eval_section_4_5_1_timeRing.py  eval_section_5_2_1.py  eval_section_5_2_2.py  eval_section_5_2_3.py  eval_section_5_2_4.py  eval_section_5_3_1A.py  eval_section_5_3_1B.py  eval_section_5_3_2.py  eval_section_5_3_3.py  eval_section_5_3_3a_nonObsv.py  eval_section_5_5_external.py  eval_section_5_5_robustness.pickle  eval_section_5_5_robustness.py  plot_section_5_5_robustness.py  readme.md  train_step1_generateData.py  train_step2_trainRing.py
baselines/: __init__.py  qmt_baselines.py
baselines/riann/: readme.md
baselines/rnno/: rnno.py  rnno_v2_xy.pickle  rnno_v2_yz.pickle  train_rnno_baselines.py
data/: benchmark.py  diodem.py
data/dataset/: readme.md
data/dataset/trial1/: imu_rigid.csv  omc.csv
data/dataset/trial2/: imu_rigid.csv  omc.csv
data/openaxes_dataset/: readme.md  time_sync.py
data/openaxes_dataset/groundtruth/robot-circle-100/: carpus.csv  digitus.csv  humerus.csv  radius.csv
data/openaxes_dataset/groundtruth/robot-circle-150/: carpus.csv  digitus.csv  humerus.csv  radius.csv
data/openaxes_dataset/groundtruth/robot-circle-200/: carpus.csv  digitus.csv  humerus.csv  radius.csv
data/openaxes_dataset/groundtruth/robot-circle-250/: carpus.csv  digitus.csv  humerus.csv  radius.csv
data/openaxes_dataset/groundtruth/robot-triangle-100/: carpus.csv  digitus.csv  humerus.csv  radius.csv
data/repoIMU_dataset/: readme.md
imu_spec_sheets/: readme.md
pkg/: pyproject.toml
pkg/src/ring/rendering/: mujoco_render.py
(+28 files in other folders)
